# presumidos

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  jogos-fase-grupos.json
deploy/: Caddyfile  backup.sh  deploy.sh  maintenance.sh  restore-test.sh  restore.sh
deploy/backup/: Dockerfile  backup.sh
deploy/maintenance/: .gitignore  maintenance.html
deploy/notify/: send-knockout.mjs
ferrugem-web/: Cargo.toml  Dioxus.toml  test.db-shm  test.db-wal
ferrugem-web/assets/: main.css
ferrugem-web/migrations/: 0001_init.sql  0002_seed_matches.sql  0003_real_schedule.sql  0004_phase_release.sql  0005_scoring_knockout.sql  0006_security_hardening.sql  0007_email_codes.sql  0008_match_finished.sql  0009_point_adjustments.sql  0010_live_scores.sql  0011_web_push.sql  0012_admin_console.sql  0013_prediction_reactions.sql  0014_clear_seeded_knockout.sql  0015_knockout_autofill.sql  0016_clear_manual_source_for_pending_knockout.sql
ferrugem-web/src/: admin.rs  api.rs  auth.rs  config.rs  context.rs  dashboard.rs  db.rs  email.rs  error.rs  football.rs  forgot_password.rs  http_tests.rs  leaderboard.rs  login.rs  main.rs  matches.rs  models.rs  pools.rs  predictions.rs  push.rs  push_stub.rs  register.rs  scoring.rs  security.rs
scripts/: backup-db.sh  dev-admin.ps1  dev-admin.sh
web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
web/public/: site.webmanifest  sw.js
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web/src/components/: AuthGuard.tsx  AuthPendingCard.tsx  HomeLiveHighlight.tsx  KnockoutControl.tsx  Layout.tsx  MatchCard.tsx  Navbar.tsx  PageShell.tsx
web/src/components/ui/: ThemeToggle.tsx  button.tsx  card.tsx  field.tsx  input.tsx
web/src/hooks/: queries.ts  useAuth.tsx  usePushReminders.ts  useTheme.tsx
web/src/lib/: adminReauth.ts  api.ts  push.ts  selections.ts  utils.ts
web/src/pages/: Admin.tsx  Conta.tsx  Contact.tsx  Dashboard.tsx  ForgotPassword.tsx  Home.tsx  Leaderboard.tsx  Login.tsx  PoolPredictions.tsx  Predictions.tsx  Privacy.tsx  Register.tsx  Terms.tsx
web/src/types/: index.ts
