[package]
name = "ferrugem-web"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "chrono"], optional = true }
argon2 = { version = "0.5", optional = true }
rand_core = { version = "0.6", features = ["getrandom"], optional = true }
dotenvy = { version = "0.15", optional = true }
rpassword = { version = "7", optional = true }
ipnet = { version = "2.11", optional = true }
resend-rs = { version = "0.25.1", optional = true }
redis = { version = "0.29", features = ["tokio-comp"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }

[features]
default = ["server"]
server = [
    "dep:sqlx",
    "dep:argon2",
    "dep:rand_core",
    "dep:dotenvy",
    "dep:rpassword",
    "dep:ipnet",
    "dep:resend-rs",
    "dep:redis",
    "dep:reqwest",
]
